--- a/compensating-transactions/mongodb-simple/pom.xml
+++ b/compensating-transactions/mongodb-simple/pom.xml
@@ -85,8 +85,7 @@
       </exclusions>
     </dependency>
 
-    <!-- Import the CDI API, we use provided scope as the API is included
-        in WildFly -->
+    <!-- Import the CDI API, we use provided scope as the API is included in WildFly -->
     <dependency>
       <groupId>jakarta.enterprise</groupId>
       <artifactId>jakarta.enterprise.cdi-api</artifactId>
@@ -165,8 +164,7 @@
 
   <build>
     <plugins>
-      <!-- Compiler plugin enforces Java 1.6 compatibility and activates
-          annotation processors -->
+      <!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation processors -->
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.1</version>
@@ -207,9 +205,7 @@
             <configuration>
               <skip>false</skip>
               <systemPropertyVariables combine.children="append">
-                <!--
-                                    Used in arquillian.xml
-                                -->
+                <!-- Used in arquillian.xml -->
                 <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug}</server.jvm.args>
                 <modular.jdk.args>${modular.jdk.args}</modular.jdk.args>
                 <node.address>127.0.0.1</node.address>
@@ -243,9 +239,7 @@
               <skip>false</skip>
               <argLine>${ipv6.server.jvm.args}</argLine>
               <systemPropertyVariables combine.children="append">
-                <!--
-                                    Used in arquillian.xml
-                                -->
+                <!-- Used in arquillian.xml -->
                 <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv6.server.jvm.args} ${jvm.args.debug}</server.jvm.args>
                 <modular.jdk.args>${modular.jdk.args}</modular.jdk.args>
                 <node.address>[::1]</node.address>
