--- a/compensating-transactions/travel-agent/pom.xml
+++ b/compensating-transactions/travel-agent/pom.xml
@@ -146,8 +146,7 @@
 
   <build>
     <plugins>
-      <!-- Compiler plugin enforces Java 1.6 compatibility and activates
-          annotation processors -->
+      <!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation processors -->
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.1</version>
@@ -188,9 +187,7 @@
             <configuration>
               <skip>false</skip>
               <systemPropertyVariables combine.children="append">
-                <!--
-                                    Used in arquillian.xml
-                                -->
+                <!-- Used in arquillian.xml -->
                 <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug}</server.jvm.args>
                 <modular.jdk.args>${modular.jdk.args}</modular.jdk.args>
                 <node.address>127.0.0.1</node.address>
@@ -223,9 +220,7 @@
               <skip>false</skip>
               <argLine>${ipv6.server.jvm.args}</argLine>
               <systemPropertyVariables combine.children="append">
-                <!--
-                                    Used in arquillian.xml
-                                -->
+                <!-- Used in arquillian.xml -->
                 <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv6.server.jvm.args} ${jvm.args.debug}</server.jvm.args>
                 <modular.jdk.args>${modular.jdk.args}</modular.jdk.args>
                 <node.address>[::1]</node.address>
