--- a/pom.xml
+++ b/pom.xml
@@ -251,7 +251,7 @@
         <version.plugin.maven.dependency>2.3</version.plugin.maven.dependency>
         <version.postgresql>9.1-901.jdbc4</version.postgresql>
         <version.resteasy.api>3.0.12.Final</version.resteasy.api>
-        <version.resteasy>6.1.0.Final</version.resteasy>
+        <version.resteasy>6.2.1.Final</version.resteasy>
         <version.shrinkwrap>1.2.6</version.shrinkwrap>
 <!--         Using an older plugin version to have compatibility with older maven version -->
         <version.surefire.plugin>2.22.2</version.surefire.plugin>
@@ -259,7 +259,7 @@
         <version.war.plugin>3.2.3</version.war.plugin>
         <version.weld>5.0.1.Final</version.weld>
         
-        <version.wildfly.plugin>1.1.0.Alpha10</version.wildfly.plugin>
+        <version.wildfly.plugin>4.0.0.Final</version.wildfly.plugin>
         <version.wildfly.core>18.1.2.Final</version.wildfly.core>
         <version.wildfly.logging>5.0.0.Beta5</version.wildfly.logging>
         
