--- a/rts/at/undertow/pom.xml
+++ b/rts/at/undertow/pom.xml
@@ -18,9 +18,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-      <groupId>org.jboss.narayana.quickstart.rts</groupId>
-      <artifactId>restat-quickstarts</artifactId>
-      <version>6.0.0.Final-SNAPSHOT</version>
+        <groupId>org.jboss.narayana.quickstart.rts</groupId>
+        <artifactId>restat-quickstarts</artifactId>
+        <version>6.0.0.Final-SNAPSHOT</version>
     </parent>
     <groupId>org.jboss.narayana</groupId>
     <artifactId>rts-undertow-qs</artifactId>
@@ -61,7 +61,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-core-spi</artifactId>
+            <artifactId>resteasy-core</artifactId>
             <version>${version.resteasy}</version>
         </dependency>
         <dependency>
@@ -74,22 +74,22 @@
     <build>
         <defaultGoal>package</defaultGoal>
         <plugins>
-	          <plugin>
-		          <groupId>org.codehaus.mojo</groupId>
-		          <artifactId>exec-maven-plugin</artifactId>
-		          <executions>
-		            <execution>
-			            <id>Run Quickstart</id>
-			            <phase>integration-test</phase>
-			            <goals>
-			                <goal>java</goal>
-			            </goals>
-		              <configuration>
-		                <mainClass>org.jboss.narayana.rts.TxnTest</mainClass>
-		              </configuration>
-		            </execution>
-		          </executions>
-	          </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>Run Quickstart</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>org.jboss.narayana.rts.TxnTest</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
