--- a/ArjunaJTA/jakarta_transaction/pom.xml
+++ b/ArjunaJTA/jakarta_transaction/pom.xml
@@ -31,9 +31,9 @@
 	Examples showing how to the jakarta.transaction.Transaction interface. Refer to the readme file for more details.
 	</description>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>javax_transaction</artifactId>
+  <artifactId>jakarta_transaction</artifactId>
   <packaging>jar</packaging>
-  <name>Javax Transaction Examples</name>
+  <name>Jakarta Transaction Examples</name>
   <build>
     <plugins>
       <!-- This plugin allows our example to be executed by maven -->
