--- a/rts/at/undertow/pom.xml
+++ b/rts/at/undertow/pom.xml
@@ -66,6 +66,11 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-core-spi</artifactId>
+            <version>${version.resteasy}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-undertow</artifactId>
             <version>${version.resteasy}</version>
         </dependency>
