--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
     <url>https://github.com/jbosstm/quickstart</url>
   </scm>
   <modules>
+    <module>agroal</module>
     <module>ArjunaJTS</module>
     <module>transactionaldriver</module>
     <module>jca-and-tomcat</module>
@@ -171,7 +172,7 @@
         <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.modular}</server.jvm.args>
         <spring.version>2.0.9.RELEASE</spring.version>
         <test.logs.to.file>false</test.logs.to.file>
-        <version.agroal>1.3</version.agroal>
+        <version.agroal>2.0</version.agroal>
 <!--         arquillian -->
         <version.arquillian.byteman>1.1.0</version.arquillian.byteman>
         <version.arquillian.graphene>2.0.3.Final</version.arquillian.graphene>
@@ -189,7 +190,7 @@
         <version.exec-maven-plugin>1.4.0</version.exec-maven-plugin>
         <version.glassfish.corba.omgapi>4.2.1</version.glassfish.corba.omgapi>
         <version.glassfish.json>2.0.1</version.glassfish.json>
-        <version.h2>2.1.210</version.h2>
+        <version.h2>2.1.214</version.h2>
         <version.hibernate.validator>8.0.0.Final</version.hibernate.validator>
         <version.hibernate>5.6.11.Final</version.hibernate>
         <version.jackson>2.13.0</version.jackson>
