JBTM-3699 rename jee_transactional_app into jakartaee_transactional_app

--- a/ArjunaJTA/pom.xml
+++ b/ArjunaJTA/pom.xml
@@ -142,7 +142,7 @@
   </dependencies>
 
   <modules>
-    <module>jee_transactional_app</module>
+    <module>jakartaee_transactional_app</module>
     <module>jakarta_transaction</module>
     <module>object_store/</module>
     <module>recovery</module>
