--- a/ArjunaJTA/jakartaee_transactional_app/pom.xml
+++ b/ArjunaJTA/jakartaee_transactional_app/pom.xml
@@ -19,7 +19,7 @@
         <version>6.0.0.Final-SNAPSHOT</version>
     </parent>
     <groupId>org.jboss.narayana.quickstart.jta</groupId>
-    <artifactId>jee_transactional_app</artifactId>
+    <artifactId>jakartaee_transactional_app</artifactId>
     <name>basic integration example</name>
     <description>basic integration example</description>
     <packaging>war</packaging>
