--- a/ArjunaJTA/pom.xml
+++ b/ArjunaJTA/pom.xml
@@ -140,23 +140,12 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <profiles>
-    <profile>
-      <id>include-for-JDK11-above-versions</id>
-      <activation>
-        <jdk>[11,)</jdk>
-      </activation>
-      <modules>
-        <module>jee_transactional_app</module>
-      </modules>
-    </profile>
-  </profiles>
 
   <modules>
+    <module>jee_transactional_app</module>
     <module>jakarta_transaction</module>
     <module>object_store/</module>
-<!--     jakarta TODO: error in class HornetQConnectionFactory incompatible types: javax.jms.XAConnection cannot be converted to jakarta.jms.XAConnection -->
-<!--     <module>recovery</module> -->
+    <module>recovery</module>
     <module>maven</module>
   </modules>
 </project>
