JBTM-3722 jboss-transactions-spi component upgrade

--- a/at/bridge/pom.xml
+++ b/at/bridge/pom.xml
@@ -45,7 +45,7 @@
   <dependencies>
     <dependency>
       <groupId>org.jboss</groupId>
-      <artifactId>jboss-transaction-spi-jakarta</artifactId>
+      <artifactId>jboss-transaction-spi</artifactId>
       <version>${version.org.jboss.jboss-transaction-spi}</version>
     </dependency>
     <dependency>
