--- a/ArjunaCore/pom.xml
+++ b/ArjunaCore/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <artifactId>narayana-quickstarts-all</artifactId>
     <groupId>org.jboss.narayana.quickstart</groupId>
-    <version>6.0.0.Final-SNAPSHOT</version>
+    <version>6.0.0.Final</version>
   </parent>
   <groupId>org.jboss.narayana.quickstart.arjunacore</groupId>
   <artifactId>narayana-quickstarts-core</artifactId>
