--- a/ArjunaJTS/interop/pom.xml
+++ b/ArjunaJTS/interop/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.jts</groupId>
     <artifactId>narayana-quickstarts-jts</artifactId>
-    <version>6.0.0.Final-SNAPSHOT</version>
+    <version>6.0.0.Final</version>
   </parent>
   <groupId>org.jboss.narayana.quickstart.jts</groupId>
   <artifactId>jts-interop-quickstart</artifactId>
