--- a/XTS/pom.xml
+++ b/XTS/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart</groupId>
     <artifactId>narayana-quickstarts-all</artifactId>
-    <version>6.0.0.Final-SNAPSHOT</version>
+    <version>6.0.0.Final</version>
   </parent>
   <groupId>org.jboss.narayana.quickstart.xts</groupId>
   <artifactId>narayana-quickstarts-xts</artifactId>
