--- a/XTS/raw-xts-api-demo/pom.xml
+++ b/XTS/raw-xts-api-demo/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstart.xts</groupId>
     <artifactId>narayana-quickstarts-xts</artifactId>
-    <version>6.0.0.Final-SNAPSHOT</version>
+    <version>6.0.0.Final</version>
   </parent>
   <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
   <artifactId>xts-demo-all</artifactId>
