--- a/XTS/raw-xts-api-demo/war/pom.xml
+++ b/XTS/raw-xts-api-demo/war/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
     <artifactId>xts-demo-all</artifactId>
-    <version>6.0.0.Final-SNAPSHOT</version>
+    <version>6.0.0.Final</version>
   </parent>
   <artifactId>xts-demo-war</artifactId>
   <packaging>war</packaging>
