--- a/rts/at/recovery/recovery2/pom.xml
+++ b/rts/at/recovery/recovery2/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts</groupId>
         <artifactId>recovery-quickstarts</artifactId>
-        <version>6.0.0.Final-SNAPSHOT</version>
+        <version>6.0.0.Final</version>
     </parent>
     <artifactId>recovery2</artifactId>
     <name>REST-AT Quickstart: Participant Service with Recovery 2</name>
