[JBTM-3740] Implement BOM in all the Narayana Module

--- a/at/integration/pom.xml
+++ b/at/integration/pom.xml
@@ -134,6 +134,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.14</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.jboss.arquillian.junit</groupId>
       <artifactId>arquillian-junit-container</artifactId>
       <version>${version.org.jboss.arquillian.core}</version>
