[JBTM:3462] Migrate the SRA demo package (io.narayana.sra.demo) over to the [quickstart repo|https://github.com/jbosstm/quickstart]

--- a/rts/at/pom.xml
+++ b/rts/at/pom.xml
@@ -59,5 +59,6 @@
     <module>recovery</module>
     <module>jta-service</module>
     <module>undertow</module>
+    <module>sra</module>
   </modules>
 </project>
