--- a/STM/optimistic/pom.xml
+++ b/STM/optimistic/pom.xml
@@ -17,7 +17,7 @@
     <parent>
       <artifactId>stm-all</artifactId>
       <groupId>org.jboss.narayana.quickstart.stm</groupId>
-      <version>6.0.1.Final</version>
+      <version>6.0.2.Final-SNAPSHOT</version>
     </parent>
 	<groupId>org.jboss.narayana.quickstart.stm</groupId>
 	<artifactId>optimistic</artifactId>
